# MSCProof

./: Cargo.toml  README.md
benches/: vgg11_bench.rs
src/: conv.rs  data_structures.rs  general_prover.rs  general_verifier.rs  layer_verifier.rs  lib.rs  matmul.rs  mlsumcheck.rs  test.rs  utils.rs
src/CNN/: mod.rs  prover.rs  verifier.rs
src/ipformlsumcheck/: mod.rs  prover.rs  verifier.rs
