[package]
name = "modgkr"
version = "0.1.0"
authors = ["Damien Robissout <damien.robissout@imdea.org>",
		   "David Balbas <david.balbas@imdea.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = {package = "ark-ff", version = "^0.3.0" }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0" }
ark-bls12-381 = {version = "0.3.0"}
ark-ec = {version = "0.3.0"}
ark-marlin = {version = "^0.3.0", default-features = false }
ark-test-curves = {  version = "^0.3.0", default-features = false, features = [ "bls12_381_curve", "bn384_small_two_adicity_curve"] }
ark-serialize-derive = { version = "^0.3.0", optional = true }

ark-linear-sumcheck = { version = "^0.3.0" }

blake2 = { version = "0.9", default-features = false }
hashbrown = { version = "0.13.1" }
rayon = { version = "1", optional = true }
rand_core = "0.6.0"

hyperplonk = { git = "https://github.com/EspressoSystems/hyperplonk" , branch = "bench-11-12"}
subroutines = { git = "https://github.com/EspressoSystems/hyperplonk" , branch = "bench-11-12"}


rand_chacha = { version = "0.3.0", default-features = false }
ocl-convolution = "0.3.0"
ndarray = "0.15.6"
rand = "0.8.5"
ndarray-conv = "0.1.3"
ndarray-rand = "0.14.0"
convolutions-rs = "0.3.4"
num-traits = "0.2.15"
derive-new = "0.5.9"
itertools = "0.11.0"

jemalloc-ctl = "^0.5"
jemallocator = "^0.5"

[dev-dependencies]
ark-test-curves = {  version = "^0.3.0", default-features = false, features = [ "bls12_381_curve", "bn384_small_two_adicity_curve"] }

[features]
default = ["std"]
std = ["ark-ff/std", "ark-serialize/std", "blake2/std", "ark-std/std", "ark-poly/std"]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon"]



[[bench]]
name = "vgg11_bench"
path = "benches/vgg11_bench.rs"
harness = false


[lib]
name = "modgkr_lib"
path = "src/lib.rs"
